<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/addMoreSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addMoreSymptoms"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/addMoreSymptoms"
        >
        <EditText
            android:id="@+id/newSymptom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/newSymptom" />
        <Button
            android:id="@+id/submitBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submit"
            />

    </LinearLayout>

</RelativeLayout>